--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   "homepage": "https://github.com/daikondaji/mochi-bot#readme",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.6.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
+    "distube": "^3.0.0-beta.38",
     "dotenv": "^10.0.0",
-    "fs": "^0.0.1-security"
+    "ffmpeg-static": "^4.4.0",
+    "fs": "^0.0.1-security",
+    "libsodium": "^0.7.9",
+    "libsodium-wrappers": "^0.7.9"
   }
 }
